# quadrocopter

./: .gitignore  CMakeLists.txt
src/: Calibrator.cpp  Calibrator.h  DroneTracker.cpp  DroneTracker.h  Triangulation.cpp  Triangulation.h  calibrator.cpp  calibrator.h  defines.h  main.cpp  utils.h
src/IO/: CameraStreamer.cpp  CameraStreamer.h  ICamera.cpp  ICamera.h  LogitechC920.cpp  LogitechC920.h
src/math/: MSVC_Fixes.h  Matrix2x2.hh  Matrix3x3.hh  Matrix4x4.hh  SE3.cpp  SE3.hh  TypelessMath.hh  Vector.hh
src/scene/: CameraIntrinsics.cpp  CameraIntrinsics.h  CameraPoseData.cpp  CameraPoseData.h  Ray.h
